@@ -1,88 +1,87 @@
 package com.sprint.mission.discodeit.repository.file;
-
+import org.springframework.stereotype.Repository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.beans.factory.annotation.Value;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
-
-import java.io.IOException;
-import java.io.ObjectInputStream;
-import java.io.ObjectOutputStream;
-import java.io.UncheckedIOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.io.*;
+import java.nio.file.*;
+import java.util.*;
 import java.util.stream.Stream;
-
+@Repository
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 public class FileChannelRepository implements ChannelRepository {
-
     private final Path directory;
-
-    public FileChannelRepository() {
-        this.directory = Paths.get(System.getProperty("user.dir"), "data", "channel");
+    public FileChannelRepository(@Value("${discodeit.repository.file-directory:.discodeit}") String root) {
+        this.directory = Path.of(root).resolve("channel");
         try {
             Files.createDirectories(directory);
-        } catch (IOException e) {
-            throw new UncheckedIOException("채널 데이터 디렉토리를 생성할 수 없습니다.", e);
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException("저장 폴더 생성 실패", e);
         }
     }
-
-    private Path resolvePath(UUID id) {
-        return directory.resolve(id.toString() + ".ser");
+    private Path path(UUID id) {
+        return directory.resolve(id + ".ser");
     }
-
     @Override
-    public Channel createChannel(Channel channel) {
-        Path path = resolvePath(channel.getId());
-        try (ObjectOutputStream oos = new ObjectOutputStream(Files.newOutputStream(path))) {
-            oos.writeObject(channel);
-        } catch (IOException e) {
-            throw new UncheckedIOException("채널 저장에 실패했습니다. id = " + channel.getId(), e);
+    public Channel save(Channel entity) {
+        Path file = path(entity.getId());
+        try (ObjectOutputStream output = new ObjectOutputStream(Files.newOutputStream(file))) {
+            output.writeObject(entity);
         }
-        return channel;
+        catch (IOException e) {
+            throw new UncheckedIOException("저장 실패: " + entity.getId(), e);
+        }
+        return entity;
     }
-
     @Override
-    public Optional<Channel> getChannel(UUID id) {
-        Path path = resolvePath(id);
+    public Optional<Channel> findById(UUID id) {
+        Path path = path(id);
         if (Files.notExists(path)) {
             return Optional.empty();
         }
-        return Optional.of(readChannel(path));
-    }
-
-    @Override
-    public List<Channel> getChannelAll() {
-        try (Stream<Path> paths = Files.list(directory)) {
-            return paths
-                    .filter(path -> path.toString().endsWith(".ser"))
-                    .map(this::readChannel)
-                    .toList();
-        } catch (IOException e) {
-            throw new UncheckedIOException("채널 목록을 불러오지 못했습니다.", e);
+        try (ObjectInputStream in = new ObjectInputStream(Files.newInputStream(path))) {
+            return Optional.of((Channel) in.readObject());
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException("조회 실패: " + id, e);
+        }
+        catch (ClassNotFoundException | ClassCastException e) {
+            throw new IllegalStateException("잘못된 저장 데이터: " + path, e);
         }
     }
-
     @Override
-    public void deleteChannel(UUID id) {
+    public List<Channel> findAll() {
+        List<Channel> result = new ArrayList<>();
+        try (Stream<Path> files = Files.list(directory)) {
+            for (Path file : files.toList()) {
+                String name = file.getFileName().toString();
+                if (name.endsWith(".ser")) {
+                    UUID id = UUID.fromString(name.substring(0, name.length() - 4));
+                    Optional<Channel> entity = findById(id);
+                    if (entity.isPresent()) {
+                        result.add(entity.get());
+                    }
+                }
+            }
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+        return result;
+    }
+    @Override
+    public void deleteById(UUID id) {
         try {
-            Files.deleteIfExists(resolvePath(id));
-        } catch (IOException e) {
-            throw new UncheckedIOException("채널 삭제에 실패했습니다. id = " + id, e);
+            Files.deleteIfExists(path(id));
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
-
     @Override
     public boolean existsById(UUID id) {
-        return Files.exists(resolvePath(id));
-    }
-
-    private Channel readChannel(Path path) {
-        try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(path))) {
-            return (Channel) ois.readObject();
-        } catch (IOException | ClassNotFoundException e) {
-            throw new RuntimeException("채널 역직렬화에 실패했습니다. path = " + path, e);
-        }
+        return Files.exists(path(id));
     }
 }
